[package]
name = "yarg-leaderboard-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
catalytic = "0.1.20"
chrono = "0.4.31"
dotenv = "0.15.0"
scylla = "0.10.1"
serde = { version = "1.0.192", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4"] }
